# extract_text

./: mkdocs.yml  pyproject.toml
text_extract/: app.py  controller.py  view.py
