[tool.poetry]
name = "text-extract"
version = "0.1.0"
description = ""
authors = ["Thiago Ribeiro <mackandalls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
textual-dev = "^1.5.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.8.0"
mkdocs-material = "^9.5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_lenght = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
cov = "coverage html"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "task cov"